# koe

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  mise.toml  rustfmt.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.devcontainer/config/: .gitignore  koe.example.yaml  voicevox_presets.yaml
.devcontainer/scripts/: on-create.sh
.github/: ghalint.yaml  renovate.json5
.github/workflows/: ci.yml  release.yml
config/: example.env  example.koe.yaml  example.redis.conf  example.voicevox_presets.yaml
crates/koe/: Cargo.toml
crates/koe-audio/: Cargo.toml
crates/koe-audio/src/: audio.rs  ffmpeg.rs  lib.rs
crates/koe-call/: Cargo.toml
crates/koe-call/src/: lib.rs
crates/koe-config/: Cargo.toml
crates/koe-config/src/: lib.rs
crates/koe-db/: Cargo.toml
crates/koe-db/src/: dict.rs  lib.rs  usage.rs  voice.rs
crates/koe-speech/: Cargo.toml
crates/koe-speech/src/: lib.rs  speech.rs  voicevox.rs
crates/koe/src/: app_state.rs  audio_queue.rs  command_setup.rs  config.rs  context_store.rs  error.rs  event_handler.rs  main.rs  regex.rs  sanitize.rs  songbird_util.rs  speech.rs  voice_client.rs  voice_preset.rs  voice_state.rs
crates/koe/src/command/: handler.rs  mod.rs  model.rs  parser.rs  setup.rs
crates/koe/src/commands/: dict.rs  help.rs  join.rs  leave.rs  mod.rs  skip.rs  voice.rs
crates/koe/src/commands/dict/: add.rs  mod.rs  remove.rs  view.rs
crates/koe/src/component_interaction/: custom_id.rs  handler.rs  mod.rs
crates/koe/src/components/: mod.rs  voice_select.rs
crates/koe/src/db/: voice.rs
crates/koe/src/handler/: command.rs  message.rs  mod.rs  voice_state.rs
crates/koe/src/message/: handler.rs  mod.rs  read.rs
crates/koe/src/tts/: speech.rs
crates/koe/src/voice_state/: handler.rs
deployment/: docker-compose.yml
deployment/config/: koe.yaml  redis.conf  voicevox_presets.yaml
devtools/: .gitignore  .prettierignore  .prettierrc.js  .release-it.js  .yarnrc.yml  generate-image-tags.js  package.json  speakers_to_presets.py
devtools/.husky/: commit-msg
devtools/src/: generateDockerTags.js
devtools/template/changelog/: header.hbs
docs/: faq.md  release_procedure.md  setup_guide.md  user_guide.md
koe/: Cargo.toml
koe-audio/: Cargo.toml
koe-audio/src/: audio.rs  ffmpeg.rs
koe-config/: Cargo.toml
koe-config/src/: lib.rs
koe-db/: Cargo.toml
koe-db/src/: dict.rs  voice.rs
koe-speech/: Cargo.toml
koe-speech/src/: google_cloud.rs  lib.rs  speech.rs
koe/src/: command.rs  command_setup.rs  context_store.rs  main.rs  regex.rs  speech.rs  status.rs  voice_client.rs
koe/src/handler/: command.rs  message.rs  mod.rs  voice_state.rs
src/: main.rs  voice_call.rs
src/commands/: join.rs  leave.rs  voice.rs
src/commands/dict/: add.rs  remove.rs  view.rs
src/components/voice_select/: button.rs  mod.rs  select.rs
src/db/: mod.rs
src/message/: read.rs
src/tts/: speech.rs  voicevox.rs
