[package]
name = "koe"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
# Basics
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# Logging
log = "0.4.28"
ecs-logger = "1.1.0"

# Discord
serenity = { version = "0.12.4", default-features = false, features = ["cache", "client", "utils", "voice", "native_tls_backend"] }
songbird = { version = "0.5.0", default-features = false, features = ["driver", "gateway", "builtin-queue", "native", "serenity", "tungstenite"] }
symphonia = { version = "0.5.5", default-features = false, features = ["wav", "pcm"] }
discord-md = "3.0.0"

# Database
redis = { version = "0.32.7", default-features = false, features = ["aio", "tokio-comp"] }

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

# Utilities
reqwest = { version = "0.12.24", features = ["json"] }
dashmap = "6.1.0"
aho-corasick = "1.1.4"
regex = "1.12.2"
rand = "0.9.2"

[lints.clippy]
manual_let_else = "warn"
must_use_candidate = "warn"
needless_pass_by_value = "warn"
ref_option = "warn"
single_match_else = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_semicolon = "warn"
unused_async = "warn"
