[package]
name = "koe"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
# Basics
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# Logging
log = "0.4.32"
env_logger = "0.11.10"

# Discord
serenity = { version = "0.12.5", default-features = false, features = ["cache", "client", "utils", "voice", "rustls_backend"] }
songbird = { version = "0.6.0", default-features = false, features = ["driver", "gateway", "builtin-queue", "rustls", "serenity", "tungstenite"] }
symphonia = { version = "0.5.5", default-features = false, features = ["wav", "pcm"] }
discord-md = "3.0.0"

# Database
redis = { version = "1.2.2", default-features = false, features = ["aio", "tokio-comp"] }

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

# Utilities
reqwest = { version = "0.13.4", features = ["json"] }
dashmap = "6.2.1"
aho-corasick = "1.1.4"
regex = "1.12.3"
rand = "0.10.1"

[lints.clippy]
manual_let_else = "warn"
must_use_candidate = "warn"
needless_pass_by_value = "warn"
ref_option = "warn"
single_match_else = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_semicolon = "warn"
unused_async = "warn"
