[package]
name = "koe"
version = "0.1.0"
edition = "2018"

[dependencies]
koe-audio = { path = "../koe-audio" }
koe-config = { path = "../koe-config" }
koe-speech = { path = "../koe-speech" }

# Basics
anyhow = "1.0.43"
tokio = { version = "1.10.1", features = ["rt-multi-thread", "macros"] }

# Logging
log = "0.4.14"
env_logger = "0.9.0"

# Discord
serenity = { version = "0.10.9", default-features = false, features = ["cache", "client", "model", "voice", "unstable_discord_api", "rustls_backend"] }
songbird = "0.2.0"

dashmap = "4.0.2"
