[package]
name = "koe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
koe-audio = { path = "../koe-audio" }
koe-call = { path = "../koe-call" }
koe-config = { path = "../koe-config" }
koe-db = { path = "../koe-db" }
koe-speech = { path = "../koe-speech" }

# Basics
anyhow = { version = "1.0.82", features = ["backtrace"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Logging
log = "0.4.20"
ecs-logger = "1.1.0"

# Error reporting
sentry = { version = "0.34.0", features = ["anyhow"] }

# Discord
serenity = { version = "0.11.7", default-features = false, features = ["cache", "client", "utils", "voice", "native_tls_backend"] }
songbird = { version = "0.3.2", default-features = false, features = ["serenity-native", "driver"] }
discord-md = "3.0.0"

# Utilities
dashmap = "5.5.3"
once_cell = "1.19.0"
aho-corasick = "1.1.3"
regex = "1.10.4"
rand = "0.8.5"
