[package]
name = "koe"
version.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
koe-call.workspace = true
koe-config.workspace = true
koe-db.workspace = true
koe-speech.workspace = true

# Basics
anyhow.workspace = true
tokio.workspace = true

# Logging
log.workspace = true
ecs-logger.workspace = true

# Error reporting
sentry.workspace = true

# Discord
serenity.workspace = true
songbird.workspace = true
discord-md.workspace = true

# Utilities
dashmap.workspace = true
aho-corasick.workspace = true
regex.workspace = true
rand.workspace = true
