[package]
name = "koe"
version.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
# Basics
anyhow.workspace = true
tokio.workspace = true

# Logging
log.workspace = true
ecs-logger.workspace = true

# Discord
serenity.workspace = true
songbird.workspace = true
symphonia.workspace = true
discord-md.workspace = true

# Database
redis.workspace = true

# Configuration
serde.workspace = true
serde_yaml.workspace = true

# Utilities
reqwest.workspace = true
dashmap.workspace = true
aho-corasick.workspace = true
regex.workspace = true
rand.workspace = true

[lints]
workspace = true
